Squashed commit of the following:
commit e9f0fd96b437b1b460d63a0486a2e1aea987da08
Author: Culnane Douglas <douglas.culnane@extern.a1.at>
Date:   Mon Oct 11 20:09:23 2021 +0200

    clean up code

commit 37e39f62f9f1506752baff6ee7f368cda9537ead
Merge: 970bae809b 60b4dad600
Author: Culnane Douglas <douglas.culnane@extern.a1.at>
Date:   Mon Oct 11 19:15:22 2021 +0200

    Merge https://github.com/openhab/openhab-addons into renault

commit 970bae809bd5ef5e75e5816ee1cdb00e82a56927
Author: Culnane Douglas <douglas.culnane@extern.a1.at>
Date:   Mon Oct 11 18:03:35 2021 +0200

    Working get of battery level of car,

commit 60b4dad600ef0c1181073f99b294318549570d0c
Author: lolodomo <lg.hc@free.fr>
Date:   Mon Oct 11 13:15:46 2021 +0200

    [openweathermap] Bridge status set to ONLINE when no attached things (#11360)

    Fix #11191

    Signed-off-by: Laurent Garnier <lg.hc@free.fr>

commit 22e8a37ee97f44a0cd018513195dc92c8b209392
Author: Sami Salonen <ssalonen@gmail.com>
Date:   Mon Oct 11 13:41:35 2021 +0300

    [modbus] Clarifying error messages with invalid configuration (#11292)

    Resolves #10814

    Signed-off-by: Sami Salonen <ssalonen@gmail.com>

commit 01c0b199fd383e921d54807091e074b8f742c268
Author: jlaur <jacob-github@vindvejr.dk>
Date:   Sun Oct 10 20:34:55 2021 +0200

    [miele] State/program/phase: Add raw channels and improve text channels (#11341)

    * Add raw channels for state, program and phase.
    * Provide program/phase texts when missing from XGW 3000 and for multicast.
    * Consistent handling of missing program/phase text across all appliance types.
    * Fix tumble dryer example configuration.
    * Changed tumble dryer Finished phase text for consistency.

    Fixes #11335

    Signed-off-by: Jacob Laursen <jacob-github@vindvejr.dk>

commit d4e15bfbd60aac8b3ea8b1a66a245bc0e5a57c43
Author: Wouter Born <github@maindrain.net>
Date:   Sun Oct 10 20:30:07 2021 +0200

    Remove deprecated XStream.setupDefaultSecurity calls (#11365)

    The 